--- a/views/index.html
+++ b/views/index.html
@@ -23,18 +23,13 @@
       <h2>Example Usage:</h2>
       <ul>
         <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
+        <li><a href="api/1450972800">[project url]/api/1450972800</a></li>
       </ul>
 
       <h2>Example Output:</h2>
       <p>
-        <code
-          >{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code
-        >
+        <code>{"unix":1450972800, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
       </p>
-    </div>
-    <div class="footer">
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a></p>
     </div>
   </body>
 </html>
